background-fixed on mobile

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1341,7 +1341,6 @@ p {
   padding: 30px;
   margin-top: 100px;
   max-width: 500px;
-  width: 90%;
 }
 
 .modalContent h4{
